--- a/template.html
+++ b/template.html
@@ -1,51 +1,59 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Math 243 Grades</title>
-    <link rel="stylesheet" href="./report.css">
-</head>
-<body>
-<div class="container">
-    <h3> {{ Name }} </h3>
+    <head lang="en">
+        <meta charset="UTF-8"/>
+        <title>Math 243 Grades</title>
+        <link rel="stylesheet" href="./report.css"/>
+    </head>
+    <body>
+        <div class="container">
+            <h2> {{ Name }} </h2>
 
-    <p>
-    <p>
-        This is the grade based on the SGN grading system. We consider the last two attempts on each standard. The letter 'S' is worth 1 point, the letter 'G' is worth 0.5 points, and the letter 'N' is worth 0 points. If you see a 'Z' that means that there was no work for that standard.
-    </p>
-    <h4> Summary grade for the {{ midterm_or_final }} </h4>
+            <h3> Summary grade for the {{ midterm_or_final }} </h3>
 
-        <table class="grades">
-            <tr>
-                <td> <b>Points:</b> </td>
-                <td style="text-align: center"> {{ score }} </td>
-            </tr>
-            <tr>
-                <td><b> Number of Grades below G: </b></td>
-                <td style="text-align: center"> {{ number_of_ns }} </td>
-            </tr>
-            <tr>
-                <td><b> Midterm Letter Grade </td></b>
-                <td style="text-align: center"> {{ letter_grade }} </td>
-            </tr>
-        </table>
+            <table class="grades">
+                <tr>
+                    <td> <b>Points:</b> </td>
+                    <td style="text-align: center"> {{ score }} </td>
+                </tr>
+                <tr>
+                    <td><b> Number of Grades below G: </b></td>
+                    <td style="text-align: center"> {{ number_of_ns }} </td>
+                </tr>
+                <tr>
+                    <td><b> Midterm Letter Grade </b></td>
+                    <td style="text-align: center"> {{ letter_grade }} </td>
+                </tr>
+            </table>
+            <br/><br/>
 
-    </p>
-    <h4>
-        Raw Data from Blackboard
-    </h4>
-    {{ raw_data }}
+            <h3>
+                Here's the raw Data from Blackboard
+            </h3>
+            {{ raw_data }}
+            <br/><br/>
 
-    <br/>
-    <br/>
+            <h3>
+                How was this computed?
+            </h3>
 
-    <p class="message">I've generated this report <a href="https://github.com/jmhammond/mastery_grading">via python pandas</a>, acting off raw the dataset from Blackboard's gradebook. You can check <a href="https://github.com/jmhammond/mastery_grading">my code on GitHub</a>.
-    </p>
+            <p>
+                This is the grade based on the SGN grading system. We consider only the last two attempts on each standard (rightmost-letters). The letter 'S' is worth 1 point, the letter 'G' is worth 0.5 points, and the letter 'N' is worth 0 points. If you see a 'Z' that means that there was no work for that standard.
+            </p>
+            <p>
+                The calculation of the letter grade is determined by thresholds outlined in the syllabus and below. Additionally, the +/- is determined by proximity to the next letter grade. Note that this document gives only the letter grade. +/- is assigned on MyWSU.
+            </p>
+            <h3>The grade threshold for the {{midterm_or_final}}</h3>
+            {{ grade_threshold }}
+            <br/><br/>
 
-    <p>
-        <div> <small>Run on {{ date }}</small>
-    </p>
+            <h3>Nice, but how is it computed</h3>
+            <p class="message">I've generated this report via python pandas, acting off the raw dataset from Blackboard's gradebook. You can check <a href="https://github.com/jmhammond/mastery_grading">my code on GitHub</a>. 
+            </p>
 
-    </div>
-</body>
+            <p>
+                <div> <small>Run on {{ date }}</small> </div>
+            </p>
+        </div>
+    </body>
 </html>
