Changed the header in the template

--- a/template.html
+++ b/template.html
@@ -47,7 +47,7 @@
             {{ grade_threshold }}
             <br/><br/>
 
-            <h3>Nice, but how is it computed</h3>
+            <h3>How was it computed? As in the code?</h3>
             <p class="message">I've generated this report via python pandas, acting off the raw dataset from Blackboard's gradebook. You can check <a href="https://github.com/jmhammond/mastery_grading">my code on GitHub</a>. 
             </p>
 
