Updated the template and csv with webassign

--- a/template.html
+++ b/template.html
@@ -21,6 +21,10 @@
                     <td style="text-align: center"> {{ number_of_ns }} </td>
                 </tr>
                 <tr>
+                    <td><b> WebAssign Grade </b></td>
+                    <td style="text-align: center"> {{ webassign_grade }} </td>
+                </tr>
+                <tr>
                     <td><b> Midterm Letter Grade </b></td>
                     <td style="text-align: center"> {{ letter_grade }} </td>
                 </tr>
