Updates to the master template
The code now allows optional text at the top of the reports

--- a/template.html
+++ b/template.html
@@ -10,6 +10,7 @@
             <h2> {{ Name }} </h2>
 
             <h3> Summary grade for the {{ midterm_or_final }} </h3>
+            {{ extra_text }}
 
             <table class="grades">
                 <tr>
