Updates to the mastery grading  code...

--- a/template.html
+++ b/template.html
@@ -43,7 +43,7 @@
             </h3>
 
             <p>
-                This is the grade based on the SGN grading system. We consider only the last two attempts on each standard (rightmost-letters). The letter 'S' is worth 1 point, the letter 'G' is worth 0.5 points, and the letter 'N' is worth 0 points. If you see a 'Z' that means that there was no work for that standard.
+                This is the grade based on the mastery grading system. The symbol 'PM' is worth 2 point, the letter 'P' is worth 1 points, and the letter 'N' is worth 0 points. If you see a 'Z' that means that there was no work for that standard.
             </p>
             <p>
                 The calculation of the letter grade is determined by thresholds outlined in the syllabus and below. Additionally, the +/- is determined by proximity to the next letter grade. Note that this document gives only the letter grade. +/- is assigned on MyWSU.
