Correct the grade decider and the html templates.

--- a/template_core.html
+++ b/template_core.html
@@ -18,7 +18,7 @@
                     <td style="text-align: center"> {{ core_mastered }} </td>
                 </tr>
                 <tr>
-                    <td><b>Core Proficient: </b></td>
+                    <td><b>Core at least proficient (PM + P): </b></td>
                     <td style="text-align: center"> {{ core_proficient }} </td>
                 </tr>
                 <tr>
@@ -26,11 +26,11 @@
                     <td style="text-align: center"> {{ supplemental_mastered }} </td>
                 </tr>
                 <tr>
-                    <td><b>Supplemental Proficient</b></td>
+                    <td><b>Supplemental at least proficient (PM + P)</b></td>
                     <td style="text-align: center"> {{ supplemental_proficient }} </td>
                 </tr>
                 <tr>
-                    <td><b> Midterm Letter Grade </b></td>
+                    <td><b> Letter Grade </b></td>
                     <td style="text-align: center"> {{ letter_grade }} </td>
                 </tr>
             </table>
