--- a/template.html
+++ b/template.html
@@ -26,7 +26,7 @@
                     <td style="text-align: center"> {{ webassign_grade }} </td>
                 </tr>
                 <tr>
-                    <td><b> Midterm Letter Grade </b></td>
+                    <td><b>  Letter Grade </b></td>
                     <td style="text-align: center"> {{ letter_grade }} </td>
                 </tr>
             </table>
