Added the exam grades for mditerm; and cleaned up code so it actually works.

--- a/template.html
+++ b/template.html
@@ -26,6 +26,10 @@
                     <td style="text-align: center"> {{ webassign_grade }} </td>
                 </tr>
                 <tr>
+                    <td><b> {{ midterm_or_final }} marks above N </b></td>
+                    <td style="text-align: center"> {{ exam_marks }} </td>
+                </tr>
+                <tr>
                     <td><b>  Letter Grade </b></td>
                     <td style="text-align: center"> {{ letter_grade }} </td>
                 </tr>
